--- a/index.html
+++ b/index.html
@@ -10,33 +10,19 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Colors</title>
 </head>
- 
+
 <body>
-    <h1>Hello, world!</h1>
-
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-        </div>
-    </div>
-
-    <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Dropdown button
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-        </div>
+    <div class="container">
+        <h1 class="text-primary">I am an h1</h1>
+        <h1 class="text-danger">I am an h1</h1>
+        <h1 class="text-info">I am an h1</h1>
+        <h1 class="text-success">I am an h1</h1>
+        <h1 class="text-warning">I am an h1</h1>
+        <h1 class="text-white bg-dark">I am an h1</h1>
+        <h1 class="text-success">I am an h1</h1>
+        <h1 class="bg-light">I am an h1</h1>
     </div>
 
     <!-- Optional JavaScript -->
